--- a/gestao.html
+++ b/gestao.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gestão v2.8.9 — MoskoGás</title>
+<title>Gestão v2.9.0 — MoskoGás</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; }
@@ -75,7 +75,7 @@
   <button class="btn btn-orange" onclick="load()" title="Recarregar pedidos">🔄 Atualizar</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
   <span id="bling-indicator" title="Verificando Bling..." style="background:#94a3b8;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;cursor:pointer" onclick="checkBlingStatus(true)">⏳ Bling</span>
-  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.8.9</span>
+  <span title="Versão do sistema" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700;letter-spacing:.5px">v2.9.0</span>
   <label style="display:flex;align-items:center;gap:6px;font-size:13px;margin-left:auto;cursor:pointer;">
     <input type="checkbox" id="autoRefresh" onchange="toggleAuto()"> Auto (30s)
   </label>
@@ -146,7 +146,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
 <script src="shared.js"></script>
 <script>
-// v2.8.9
+// v2.9.0
 document.getElementById('nav-placeholder').innerHTML = NAV_HTML;
 checkApiKey();
 
@@ -1021,6 +1021,26 @@ async function enviarPixWhatsGestao(orderId) {
 }
 
 init();
+
+// ═══ PIX AUTO-CHECK (gestão) — verifica PIX pendentes a cada 20s ═══
+let pixCheckBusy = false;
+async function autoCheckPixGestao(){
+  if(pixCheckBusy) return;
+  const pendentes = (window._gestaoRows||[]).filter(o => o.tipo_pagamento==='pix_receber' && !o.pago && o.pix_tx_id);
+  if(!pendentes.length) return;
+  pixCheckBusy = true;
+  for(const o of pendentes){
+    try {
+      const d = await api('/api/pix/check/'+o.id, {method:'POST'});
+      if(d.action==='marked_paid'){
+        toast('✅ PIX CONFIRMADO! Pedido #'+o.id+' pago!','success');
+        load(); break;
+      }
+    } catch(e) {}
+  }
+  pixCheckBusy = false;
+}
+setInterval(autoCheckPixGestao, 20000);
 </script>
 
 <!-- MODAL EDITAR PEDIDO -->
