--- a/pagamentos.html
+++ b/pagamentos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Pagamentos — MoskoGás v1.9.6</title>
+<title>Pagamentos — MoskoGás v1.9.7</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -65,7 +65,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.9.6 — pagamentos</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v1.9.7 — pagamentos</div>
 <div class="toolbar">
   <div style="display:flex;align-items:center;gap:4px">
     <input type="date" id="fDateFrom" onchange="loadPagamentos()" style="width:135px">
@@ -84,8 +84,9 @@
   </select>
   <input type="text" id="fQ" placeholder="🔍 Busca cliente..." oninput="loadPagamentos()" style="width:160px">
   <button class="btn btn-orange" onclick="loadPagamentos()" title="Recarregar">🔄 Atualizar</button>
+  <button class="btn" id="btn-ver-pagos" onclick="toggleVerPagos()" title="Mostrar/ocultar pedidos já pagos" style="background:#64748b;color:#fff;padding:6px 12px;font-size:12px">👁 Ver Pagos</button>
   <span id="count-badge" style="font-size:12px;color:#64748b;margin-left:4px"></span>
-  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.9.6</span>
+  <span title="Versão" style="background:#6366f1;color:#fff;border-radius:10px;padding:2px 8px;font-size:10px;font-weight:700">v1.9.7</span>
 </div>
 
 <div class="bulk-bar" id="bulk-bar">
@@ -154,6 +155,15 @@ let pendingNfeIds = [];
 
 const TIPO_LABELS = { pix_receber:'⏳ PIX Aberto', mensalista:'📅 Mensal', boleto:'🧾 Boleto', dinheiro:'💵 Dinh', pix_vista:'⚡ PIX', debito:'💳 Déb', credito:'💳 Créd' };
 const TIPOS_NFE = ['mensalista','boleto'];
+let mostrarPagos = false;
+
+function toggleVerPagos() {
+  mostrarPagos = !mostrarPagos;
+  const btn = document.getElementById('btn-ver-pagos');
+  btn.style.background = mostrarPagos ? '#16a34a' : '#64748b';
+  btn.textContent = mostrarPagos ? '👁 Pagos: ON' : '👁 Ver Pagos';
+  loadPagamentos();
+}
 
 function todayCG() { return new Date().toLocaleDateString('sv-SE',{timeZone:'America/Campo_Grande'}); }
 function daysCG(n) { const d=new Date(); d.setDate(d.getDate()+n); return d.toLocaleDateString('sv-SE',{timeZone:'America/Campo_Grande'}); }
@@ -174,7 +184,8 @@ function loadPagamentos(){clearTimeout(loadTimer);loadTimer=setTimeout(_load,150
 
 async function _load() {
   try {
-    const data = await api('/api/pagamentos');
+    const qs = mostrarPagos ? '?incluir_pagos=1' : '';
+    const data = await api('/api/pagamentos' + qs);
     allData = Array.isArray(data) ? data : [];
     const dateFrom=document.getElementById('fDateFrom').value, dateTo=document.getElementById('fDateTo').value;
     const tipo=document.getElementById('fTipo').value, q=document.getElementById('fQ').value.toLowerCase().trim();
@@ -183,10 +194,18 @@ async function _load() {
     if(tipo) rows=rows.filter(r=>r.tipo_pagamento===tipo);
     if(q) rows=rows.filter(r=>(r.customer_name||'').toLowerCase().includes(q)||(r.address_line||'').toLowerCase().includes(q)||String(r.id).includes(q));
     renderTable(rows); renderSummary(rows);
-    document.getElementById('count-badge').textContent=rows.length+' pendentes';
+    document.getElementById('count-badge').textContent = mostrarPagos
+      ? rows.length + ' registros (' + rows.filter(r=>r.pago).length + ' pagos)'
+      : rows.length + ' pendentes';
     selectedIds.clear(); updateBulkBar();
     hideLoading();
   } catch(e){hideLoading();toast('Erro: '+e.message,'error');}
+}
+
+function printRec(id) {
+  const o = allData.find(r => r.id == id);
+  if (o) window.open('print.html?data=' + encodeURIComponent(JSON.stringify(o)), '_blank');
+  else window.open('print.html?id=' + id, '_blank');
 }
 
 function timeAgo(epoch){if(!epoch)return'';const d=Math.floor(Date.now()/1000)-epoch;if(d<3600)return Math.floor(d/60)+'min';if(d<86400)return Math.floor(d/3600)+'h';return Math.floor(d/86400)+'d';}
@@ -225,11 +244,15 @@ function renderTable(rows) {
     } else {
       actionBtns+=`<button class="btn-pago" onclick="marcarPago(${p.id})" title="Confirmar recebimento PIX">✅ Pago</button>`;
     }
+    // Botão imprimir (sempre disponível)
+    actionBtns += `<button onclick="printRec(${p.id})" title="Imprimir recibo" style="background:#1F4E79;color:#fff;border:none;border-radius:6px;padding:4px 8px;cursor:pointer;font-size:12px;font-weight:700">🖨️</button>`;
     let ri='';
-    if(p.tipo_pagamento==='pix_receber'){const cnt=p.reminder_count||0;if(cnt>0&&p.last_reminder_at)ri=`<div class="ri${cnt>=3?' w':''}">\u{1F4F1}${cnt}x · ${timeAgo(p.last_reminder_at)} atrás</div>`;}
-    return `<tr>
-      <td><input type="checkbox" value="${p.id}" data-tipo="${p.tipo_pagamento||''}" ${ck} onchange="toggleSelect(this)"></td>
-      <td><strong>#${p.id}</strong>${ri}</td>
+    if(p.tipo_pagamento==='pix_receber'){const cnt=p.reminder_count||0;if(cnt>0&&p.last_reminder_at)ri=`<div class="ri${cnt>=3?' w':`}">📱${cnt}x · ${timeAgo(p.last_reminder_at)} atrás</div>`;}`
+    const trStyle = p.pago ? 'background:#f0fdf4;opacity:0.75' : '';
+    const pagoTag = p.pago ? `<span style="font-size:10px;background:#16a34a;color:#fff;border-radius:10px;padding:1px 6px;margin-left:4px">✅ pago</span>` : '';
+    return `<tr style="${trStyle}">
+      <td><input type="checkbox" value="${p.id}" data-tipo="${p.tipo_pagamento||''}" ${ck} onchange="toggleSelect(this)" ${p.pago?'disabled':''}></td>
+      <td><strong>#${p.id}</strong>${pagoTag}${ri}</td>
       <td style="white-space:nowrap;font-size:12px">${dt}<br><span style="color:#94a3b8">${hr}</span></td>
       <td style="font-weight:600;max-width:180px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap" title="${p.customer_name||''}">${p.customer_name||'—'}</td>
       <td style="color:#64748b;max-width:200px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap" title="${p.address_line||''}">${p.address_line||'—'}<br><span style="font-size:11px">${p.bairro||''}</span></td>
