chore: setup .gitignore and dev vars; clear secrets

--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MoskoGás — Menu v1.0.0</title>
+    <title>MoskoGás — Menu v1.1.0</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
@@ -119,7 +119,7 @@
         <div class="header">
             <div class="logo">🚚 MoskoGás</div>
             <div class="subtitle">Sistema de Gestão de Pedidos</div>
-            <div class="version">v1.0.0 — menu</div>
+            <div class="version">v1.1.0 — menu</div>
         </div>
 
         <div class="menu-grid">
@@ -157,6 +157,14 @@
                 <div class="menu-icon">🖨️</div>
                 <div class="menu-title">Impressão</div>
                 <div class="menu-desc">Imprimir recibos e comprovantes A4</div>
+            </a>
+
+            <!-- Vales -->
+            <a href="vales.html" class="menu-card">
+                <div class="menu-icon">🎟️</div>
+                <div class="menu-title">Controle de Vales</div>
+                <div class="menu-desc">Emissão em lote de vales/tickets e controle de baixas</div>
+                <div class="menu-badge">NOVO v1.1.0</div>
             </a>
         </div>
 
