style: renomeia Vales para Vale Gás e Tickets nas nomenclaturas

--- a/print-vales.html
+++ b/print-vales.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Impressão de Vales — MoskoGás</title>
+    <title>Impressão de Vale Gás — MoskoGás</title>
     <style>
         * {
             box-sizing: border-box;
@@ -147,11 +147,11 @@
 
     <div class="print-controls">
         <div>
-            <h1 style="font-size:18px; color:#1e293b; margin-bottom:4px;">Impressão de Vales</h1>
+            <h1 style="font-size:18px; color:#1e293b; margin-bottom:4px;">Impressões de Vale Gás</h1>
             <div id="status-text" style="color:#64748b; font-size:13px;">Carregando dados...</div>
         </div>
         <div>
-            <button class="btn" onclick="window.print()" style="background:#22c55e;">🖨️ Imprimir Vales</button>
+            <button class="btn" onclick="window.print()" style="background:#22c55e;">🖨️ Imprimir Atual</button>
             <button class="btn" onclick="window.close()" style="background:#94a3b8; margin-left:8px;">Fechar</button>
         </div>
     </div>
