--- a/vales.html
+++ b/vales.html
@@ -239,6 +239,38 @@
             border-color: #fecaca;
             color: #991b1b;
         }
+
+        .autocomplete-box {
+            position: relative;
+        }
+
+        #suggestions {
+            position: absolute;
+            top: calc(100% - 10px);
+            left: 0;
+            right: 0;
+            background: #fff;
+            border: 2px solid #f97316;
+            border-top: none;
+            border-radius: 0 0 8px 8px;
+            z-index: 100;
+            max-height: 250px;
+            overflow-y: auto;
+            display: none;
+        }
+
+        .suggestion-item {
+            padding: 10px 12px;
+            cursor: pointer;
+            border-bottom: 1px solid #f1f5f9;
+            font-size: 14px;
+            text-align: left;
+            line-height: 1.3;
+        }
+
+        .suggestion-item:hover {
+            background: #fff7ed;
+        }
     </style>
 </head>
 
@@ -269,7 +301,7 @@
                 <th>Tickets / Vale Gás</th>
                 <th>Status Resgates</th>
                 <th>Total R$</th>
-                <th>Bling</th>
+                <th>NF / Empenho</th>
                 <th>Ações</th>
             </tr>
         </thead>
@@ -286,11 +318,26 @@
                     title="Fechar">&times;</button>
             </div>
 
-            <label>Cliente / Empresa / Razão Social *</label>
-            <input type="text" id="n-cliente" placeholder="Ex: Restaurante do João LTDA" autocomplete="off">
+            <label>🔍 Buscar Cliente / Empresa / Razão Social *</label>
+            <div class="autocomplete-box">
+                <input type="text" id="n-cliente" placeholder="Digite nome ou documento para buscar..."
+                    autocomplete="off" oninput="buscaCliente(this.value)">
+                <div id="suggestions"></div>
+            </div>
 
             <label>CNPJ ou CPF (Opcional)</label>
             <input type="text" id="n-doc" placeholder="00.000.000/0001-00">
+
+            <div style="display:flex; gap:12px">
+                <div style="flex:1">
+                    <label>Nº da Nota Fiscal (Opc.)</label>
+                    <input type="text" id="n-nf" placeholder="Ex: 54321">
+                </div>
+                <div style="flex:1">
+                    <label>Nº do Empenho (Opc.)</label>
+                    <input type="text" id="n-empenho" placeholder="Ex: 2023NE00012">
+                </div>
+            </div>
 
             <div style="display:flex; gap:12px">
                 <div style="flex:1">
@@ -303,7 +350,7 @@
                 </div>
             </div>
 
-            <label>Forma de Pagamento * (Gera Venda no Bling)</label>
+            <label>Forma de Pagamento *</label>
             <select id="n-pgto">
                 <option value="dinheiro">💵 Dinheiro</option>
                 <option value="pix_vista">⚡ PIX à vista</option>
@@ -388,7 +435,10 @@
                 const d = new Date(n.created_at * 1000).toLocaleString('pt-BR', { timeZone: 'America/Campo_Grande' });
                 const pco = n.resgatados === n.total_vales && n.total_vales > 0 ? '#16a34a' : (n.resgatados > 0 ? '#f59e0b' : '#64748b');
                 const badgeRes = `<span style="background:${pco}; color:#fff; border-radius:12px; padding:2px 8px; font-size:11px; font-weight:bold;">${n.resgatados} / ${n.total_vales} resgatados</span>`;
-                const bling = n.bling_pedido_id ? `<span style="color:#16a34a; font-weight:bold" title="Pedido ${n.bling_pedido_num || n.bling_pedido_id}">✅ #${n.bling_pedido_id}</span>` : '—';
+                const docs = [];
+                if (n.nota_fiscal) docs.push('<strong>NF:</strong> ' + n.nota_fiscal);
+                if (n.empenho) docs.push('<strong>Emp:</strong> ' + n.empenho);
+                const exdocs = docs.length ? `<span style="font-size:11px;color:#475569">${docs.join('<br>')}</span>` : '—';
 
                 return `<tr onclick="viewNota(${n.id})">
             <td><strong style="color:#2563eb">#${n.id}</strong></td>
@@ -398,7 +448,7 @@
             <td><strong>${n.quantidade}</strong> vales de R$ ${n.valor_unit.toFixed(2)}</td>
             <td>${badgeRes}</td>
             <td><strong style="color:#1e293b">R$ ${n.total.toFixed(2)}</strong></td>
-            <td>${bling}</td>
+            <td>${exdocs}</td>
             <td>
                 <button class="btn btn-blue" onclick="event.stopPropagation(); window.open('print-vales.html?id=${n.id}', '_blank')" style="padding:4px 8px; font-size:11px;">🖨️ Imprimir</button>
             </td>
@@ -409,6 +459,8 @@
         function openNewModal() {
             document.getElementById('n-cliente').value = '';
             document.getElementById('n-doc').value = '';
+            document.getElementById('n-nf').value = '';
+            document.getElementById('n-empenho').value = '';
             document.getElementById('n-qtd').value = '10';
             document.getElementById('n-valor').value = '115.00';
             document.getElementById('n-pgto').value = 'dinheiro';
@@ -416,6 +468,41 @@
             document.getElementById('modal-nova').classList.add('open');
             document.getElementById('n-cliente').focus();
         }
+
+        let searchTimer;
+        function buscaCliente(val) {
+            clearTimeout(searchTimer);
+            if (val.length < 2) { document.getElementById('suggestions').style.display = 'none'; return; }
+            searchTimer = setTimeout(async () => {
+                try {
+                    const res = await api('/api/customer/search-multi?name=' + encodeURIComponent(val));
+                    const box = document.getElementById('suggestions');
+                    if (!res.length) { box.style.display = 'none'; return; }
+                    box.innerHTML = res.map((c, i) => {
+                        return `<div class="suggestion-item" onclick="selecionaCliente(${i})">
+                            <strong>${c.name || c.customer_name}</strong><br>
+                            <small>${c.address_line || ''}</small>
+                        </div>`;
+                    }).join('');
+                    box._data = res;
+                    box.style.display = 'block';
+                } catch (e) { }
+            }, 300);
+        }
+
+        function selecionaCliente(i) {
+            const c = document.getElementById('suggestions')._data[i];
+            document.getElementById('n-cliente').value = c.name || c.customer_name || '';
+            document.getElementById('n-doc').value = c.cpf_cnpj || '';
+            document.getElementById('suggestions').style.display = 'none';
+        }
+
+        document.addEventListener('click', e => {
+            if (!e.target.closest('.autocomplete-box')) {
+                const s = document.getElementById('suggestions');
+                if (s) s.style.display = 'none';
+            }
+        });
 
         function closeNovaModal() { document.getElementById('modal-nova').classList.remove('open'); }
 
@@ -435,7 +522,9 @@
                     cliente_doc: document.getElementById('n-doc').value.trim(),
                     quantidade: document.getElementById('n-qtd').value,
                     valor_unit: document.getElementById('n-valor').value,
-                    forma_pagamento: document.getElementById('n-pgto').value
+                    forma_pagamento: document.getElementById('n-pgto').value,
+                    nota_fiscal: document.getElementById('n-nf').value.trim(),
+                    empenho: document.getElementById('n-empenho').value.trim()
                 };
                 const res = await api('/api/vales/notas', { method: 'POST', body: JSON.stringify(payload) });
                 toast(`✅ Nota #${res.nota_id} emitida com sucesso!`);
