fix(vales): impede buscas vazias e aplica novo layout triplo de busca do cliente igual ao novo pedido

--- a/vales.html
+++ b/vales.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Controle de Vale Gás v1.0.0 — MoskoGás</title>
+    <title>Controle de Vale Gás v1.0.1 — MoskoGás</title>
     <style>
         * {
             box-sizing: border-box;
@@ -280,6 +280,7 @@
     <div class="toolbar">
         <button class="btn btn-blue" onclick="openNewModal()"><span style="font-size:16px">+</span> Nova Emissão de
             Vale Gás</button>
+        <span style="font-size:11px;color:#94a3b8;font-weight:bold;">v1.0.1</span>
         <button class="btn btn-orange" onclick="load()" title="Recarregar">🔄 Atualizar</button>
         <span style="font-size:12px;color:#64748b;margin-left:4px" id="count-badge"></span>
 
@@ -319,14 +320,34 @@
             </div>
 
             <label>🔍 Buscar Cliente / Empresa / Razão Social *</label>
-            <div class="autocomplete-box">
-                <input type="text" id="n-cliente" placeholder="Digite nome ou documento para buscar..."
-                    autocomplete="off" oninput="buscaCliente(this.value)">
-                <div id="suggestions"></div>
+            <div class="autocomplete-box search-fields"
+                style="background:#f8fafc; padding:12px; border-radius:8px; margin-bottom:12px; border:1px solid #e2e8f0; position:relative;">
+                <div style="display:flex; gap:8px;">
+                    <div style="flex:1">
+                        <label>Nome / Razão</label>
+                        <input type="text" id="searchName" placeholder="Nome..." autocomplete="off"
+                            oninput="buscaCliente()">
+                    </div>
+                    <div style="flex:1">
+                        <label>Telefone</label>
+                        <input type="text" id="searchPhone" placeholder="Telefone..." autocomplete="off"
+                            oninput="buscaCliente()">
+                    </div>
+                </div>
+                <div style="display:flex; gap:8px;">
+                    <div style="flex:2">
+                        <label>Endereço</label>
+                        <input type="text" id="searchAddr" placeholder="Rua..." autocomplete="off"
+                            oninput="buscaCliente()">
+                    </div>
+                    <div style="flex:1">
+                        <label>CNPJ / CPF</label>
+                        <input type="text" id="n-doc" placeholder="00.000.000/0001-00">
+                    </div>
+                </div>
+                <input type="hidden" id="n-cliente">
+                <div id="suggestions" style="top:calc(100% + 4px); width:100%;"></div>
             </div>
-
-            <label>CNPJ ou CPF (Opcional)</label>
-            <input type="text" id="n-doc" placeholder="00.000.000/0001-00">
 
             <div style="display:flex; gap:12px">
                 <div style="flex:1">
@@ -458,41 +479,68 @@
 
         function openNewModal() {
             document.getElementById('n-cliente').value = '';
+            document.getElementById('searchName').value = '';
+            document.getElementById('searchPhone').value = '';
+            document.getElementById('searchAddr').value = '';
             document.getElementById('n-doc').value = '';
             document.getElementById('n-nf').value = '';
             document.getElementById('n-empenho').value = '';
             document.getElementById('n-qtd').value = '10';
             document.getElementById('n-valor').value = '115.00';
             document.getElementById('n-pgto').value = 'dinheiro';
+            document.getElementById('suggestions').style.display = 'none';
             calcTotal();
             document.getElementById('modal-nova').classList.add('open');
-            document.getElementById('n-cliente').focus();
+            document.getElementById('searchName').focus();
         }
 
         let searchTimer;
-        function buscaCliente(val) {
+        function buscaCliente() {
             clearTimeout(searchTimer);
-            if (val.length < 2) { document.getElementById('suggestions').style.display = 'none'; return; }
+            const phone = document.getElementById('searchPhone').value.trim();
+            const name = document.getElementById('searchName').value.trim();
+            const addr = document.getElementById('searchAddr').value.trim();
+
+            if (Math.max(phone.length, name.length, addr.length) < 2) {
+                document.getElementById('suggestions').style.display = 'none';
+                return;
+            }
+
             searchTimer = setTimeout(async () => {
                 try {
-                    const res = await api('/api/customer/search-multi?name=' + encodeURIComponent(val));
+                    const params = new URLSearchParams();
+                    if (phone.length >= 2) params.set('phone', phone);
+                    if (name.length >= 2) params.set('name', name);
+                    if (addr.length >= 2) params.set('addr', addr);
+
+                    // Add protection to avoid empty queries from firing accidentally
+                    if ([...params.keys()].length === 0) {
+                        document.getElementById('suggestions').style.display = 'none';
+                        return;
+                    }
+
+                    const res = await api('/api/customer/search-multi?' + params.toString());
                     const box = document.getElementById('suggestions');
                     if (!res.length) { box.style.display = 'none'; return; }
+
                     box.innerHTML = res.map((c, i) => {
+                        const bgLabel = c.bling_contact_id ? `<span style="background:#16a34a;color:#fff;font-size:9px;font-weight:700;padding:1px 5px;border-radius:6px;margin-left:6px" title="Bling Cadastrado">B</span>` : '';
                         return `<div class="suggestion-item" onclick="selecionaCliente(${i})">
-                            <strong>${c.name || c.customer_name}</strong><br>
-                            <small>${c.address_line || ''}</small>
+                            <strong>${c.name || c.customer_name}</strong>${bgLabel}<br>
+                            <small>${c.address_line || ''} ${c.bairro ? '- ' + c.bairro : ''}</small>
                         </div>`;
                     }).join('');
                     box._data = res;
                     box.style.display = 'block';
-                } catch (e) { }
+                } catch (e) { console.error('Busca error:', e); }
             }, 300);
         }
 
         function selecionaCliente(i) {
             const c = document.getElementById('suggestions')._data[i];
             document.getElementById('n-cliente').value = c.name || c.customer_name || '';
+            document.getElementById('searchName').value = c.name || c.customer_name || '';
+            document.getElementById('searchPhone').value = c.phone_digits || '';
             document.getElementById('n-doc').value = c.cpf_cnpj || '';
             document.getElementById('suggestions').style.display = 'none';
         }
@@ -513,7 +561,8 @@
         }
 
         async function salvarNota() {
-            const cli = document.getElementById('n-cliente').value.trim();
+            const cli = document.getElementById('n-cliente').value.trim() || document.getElementById('searchName').value.trim();
+            document.getElementById('n-cliente').value = cli; // Sincroniza o hidden
             if (!cli) return toast('Insira o nome do cliente', 'error');
             const b = document.getElementById('n-btn-save'); b.disabled = true; b.textContent = "Aguarde...";
             try {
