--- a/vales.html
+++ b/vales.html
@@ -135,6 +135,43 @@
         }
 
         /* Modal */
+        .autocomplete-box {
+            position: relative;
+        }
+
+        #suggestions {
+            position: absolute;
+            top: calc(100% + 4px);
+            left: 0;
+            right: 0;
+            background: #fff;
+            border: 2px solid #f97316;
+            border-radius: 8px;
+            z-index: 100;
+            max-height: 250px;
+            overflow-y: auto;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+        }
+
+        .suggestion-item {
+            padding: 10px 12px;
+            cursor: pointer;
+            border-bottom: 1px solid #f1f5f9;
+            font-size: 14px;
+        }
+
+        .suggestion-item:hover {
+            background: #fff7ed;
+        }
+
+        .suggestion-item strong {
+            color: #1e293b;
+        }
+
+        .suggestion-item small {
+            color: #64748b;
+        }
+
         .modal-overlay {
             display: none;
             position: fixed;
