--- a/nav.html
+++ b/nav.html
@@ -119,7 +119,7 @@
         <div class="header">
             <div class="logo">🚚 MoskoGás</div>
             <div class="subtitle">Sistema de Gestão de Pedidos</div>
-            <div class="version">v1.1.0 — menu</div>
+            <div class="version">v1.2.0 — menu</div>
         </div>
 
         <div class="menu-grid">
@@ -165,6 +165,14 @@
                 <div class="menu-title">Controle de Vales</div>
                 <div class="menu-desc">Emissão em lote de vales/tickets e controle de baixas</div>
                 <div class="menu-badge">NOVO v1.1.0</div>
+            </a>
+
+            <!-- Avaliações -->
+            <a href="avaliacoes.html" class="menu-card">
+                <div class="menu-icon">⭐</div>
+                <div class="menu-title">Avaliações</div>
+                <div class="menu-desc">NPS pós-entrega via WhatsApp — nota 1-5 e Google Review</div>
+                <div class="menu-badge">NOVO v1.0.0</div>
             </a>
         </div>
 
